refactor code and implement file server to storage image
