# grpc-gen/blog/blog.swagger.json
@@ -1,12 +1,17 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "blog.proto",
-    "version": "version not set"
+    "title": "Blog Api",
+    "version": "1.0",
+    "contact": {
+      "name": "go-grpc-http-rest-microservice-tutorial project",
+      "url": "https://github.com/amsokol/go-grpc-http-rest-microservice-tutorial",
+      "email": "medium@amsokol.com"
+    }
   },
+  "host": "localhost",
   "schemes": [
-    "http",
-    "https"
+    "http"
   ],
   "consumes": [
     "application/json"
@@ -15,34 +20,7 @@
     "application/json"
   ],
   "paths": {
-    "/blog": {
-      "post": {
-        "summary": "Create Blog",
-        "operationId": "Create",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/blogBlogResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/blogBlogData"
-            }
-          }
-        ],
-        "tags": [
-          "blogervice"
-        ]
-      }
-    },
-    "/blog/{id}": {
+    "/v1/blog/{blogID}": {
       "get": {
         "summary": "Get Blog",
         "operationId": "Get",
@@ -50,13 +28,26 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/blogBlogResponse"
+              "$ref": "#/definitions/blogGetResponse"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
         "parameters": [
           {
-            "name": "id",
+            "name": "blogID",
             "in": "path",
             "required": true,
             "type": "string",
@@ -64,7 +55,7 @@
           }
         ],
         "tags": [
-          "blogervice"
+          "BlogService"
         ]
       },
       "delete": {
@@ -74,13 +65,26 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/blogBlogResponse"
+              "$ref": "#/definitions/blogDeleteResponse"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
         "parameters": [
           {
-            "name": "id",
+            "name": "blogID",
             "in": "path",
             "required": true,
             "type": "string",
@@ -88,7 +92,7 @@
           }
         ],
         "tags": [
-          "blogervice"
+          "BlogService"
         ]
       },
       "put": {
@@ -98,13 +102,26 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/blogBlogResponse"
+              "$ref": "#/definitions/blogUpdateResponse"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
         "parameters": [
           {
-            "name": "id",
+            "name": "blogID",
             "in": "path",
             "required": true,
             "type": "string",
@@ -112,11 +129,11 @@
           }
         ],
         "tags": [
-          "blogervice"
+          "BlogService"
         ]
       }
     },
-    "/blogs": {
+    "/v1/blogs": {
       "get": {
         "summary": "List Blog",
         "operationId": "List",
@@ -125,6 +142,19 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/blogListResponse"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
             }
           }
         },
@@ -145,7 +175,86 @@
           }
         ],
         "tags": [
-          "blogervice"
+          "BlogService"
+        ]
+      }
+    },
+    "/v1/create": {
+      "post": {
+        "summary": "Create Blog",
+        "operationId": "Create",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/blogCreateResponse"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/blogCreateRequest"
+            }
+          }
+        ],
+        "tags": [
+          "BlogService"
+        ]
+      }
+    },
+    "/v1/login": {
+      "post": {
+        "operationId": "Login",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/blogLoginResponse"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/blogLoginRequest"
+            }
+          }
+        ],
+        "tags": [
+          "BlogService"
         ]
       }
     }
@@ -158,10 +267,13 @@
           "type": "string",
           "format": "int64"
         },
-        "title": {
+        "header": {
           "type": "string"
         },
-        "des": {
+        "subtitle": {
+          "type": "string"
+        },
+        "background": {
           "type": "string"
         },
         "content": {
@@ -175,7 +287,7 @@
           "$ref": "#/definitions/blogStatus"
         },
         "type": {
-          "type": "string"
+          "$ref": "#/definitions/blogType"
         },
         "likes": {
           "type": "string",
@@ -213,26 +325,11 @@
           "type": "string"
         },
         "userID": {
-          "type": "string",
-          "format": "int64"
-        },
-        "userAvatar": {
-          "type": "string"
-        }
-      }
-    },
-    "blogBlogResponse": {
-      "type": "object",
-      "properties": {
-        "code": {
-          "type": "string",
-          "format": "int64"
-        },
-        "message": {
           "type": "string"
         },
-        "blog": {
-          "$ref": "#/definitions/blogBlogData"
+        "readTime": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
@@ -248,6 +345,66 @@
         },
         "content": {
           "type": "string"
+        }
+      }
+    },
+    "blogCreateRequest": {
+      "type": "object",
+      "properties": {
+        "header": {
+          "type": "string"
+        },
+        "subtitle": {
+          "type": "string"
+        },
+        "background": {
+          "type": "string"
+        },
+        "content": {
+          "type": "string"
+        },
+        "readTime": {
+          "type": "integer",
+          "format": "int32"
+        }
+      }
+    },
+    "blogCreateResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string",
+          "format": "int64"
+        },
+        "message": {
+          "type": "string"
+        }
+      }
+    },
+    "blogDeleteResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string",
+          "format": "int64"
+        },
+        "message": {
+          "type": "string"
+        }
+      }
+    },
+    "blogGetResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string",
+          "format": "int64"
+        },
+        "message": {
+          "type": "string"
+        },
+        "blog": {
+          "$ref": "#/definitions/blogBlogData"
         }
       }
     },
@@ -269,14 +426,90 @@
         }
       }
     },
+    "blogLoginRequest": {
+      "type": "object"
+    },
+    "blogLoginResponse": {
+      "type": "object"
+    },
     "blogStatus": {
       "type": "string",
       "enum": [
+        "INVALID",
         "DRAFT",
-        "PUBLISH",
+        "PENDING",
+        "PUBLISHED",
         "REMOVE"
       ],
-      "default": "DRAFT"
+      "default": "INVALID"
+    },
+    "blogType": {
+      "type": "string",
+      "enum": [
+        "PUBLIC",
+        "PRIVATE"
+      ],
+      "default": "PUBLIC"
+    },
+    "blogUpdateResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string",
+          "format": "int64"
+        },
+        "message": {
+          "type": "string"
+        }
+      }
+    },
+    "protobufAny": {
+      "type": "object",
+      "properties": {
+        "type_url": {
+          "type": "string",
+          "description": "A URL/resource name that uniquely identifies the type of the serialized\nprotocol buffer message. This string must contain at least\none \"/\" character. The last segment of the URL's path must represent\nthe fully qualified name of the type (as in\n`path/google.protobuf.Duration`). The name should be in a canonical form\n(e.g., leading \".\" is not accepted).\n\nIn practice, teams usually precompile into the binary all types that they\nexpect it to use in the context of Any. However, for URLs which use the\nscheme `http`, `https`, or no scheme, one can optionally set up a type\nserver that maps type URLs to message definitions as follows:\n\n* If no scheme is provided, `https` is assumed.\n* An HTTP GET on the URL must yield a [google.protobuf.Type][]\n  value in binary format, or produce an error.\n* Applications are allowed to cache lookup results based on the\n  URL, or have them precompiled into a binary to avoid any\n  lookup. Therefore, binary compatibility needs to be preserved\n  on changes to types. (Use versioned type names to manage\n  breaking changes.)\n\nNote: this functionality is not currently available in the official\nprotobuf release, and it is not used for type URLs beginning with\ntype.googleapis.com.\n\nSchemes other than `http`, `https` (or the empty scheme) might be\nused with implementation specific semantics."
+        },
+        "value": {
+          "type": "string",
+          "format": "byte",
+          "description": "Must be a valid serialized protocol buffer of the above specified type."
+        }
+      },
+      "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := ptypes.MarshalAny(foo)\n     ...\n     foo := \u0026pb.Foo{}\n     if err := ptypes.UnmarshalAny(any, foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
+    },
+    "runtimeError": {
+      "type": "object",
+      "properties": {
+        "error": {
+          "type": "string"
+        },
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "message": {
+          "type": "string"
+        },
+        "details": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protobufAny"
+          }
+        }
+      }
     }
-  }
+  },
+  "securityDefinitions": {
+    "bearerAuth": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ]
 }
